Add Localization for snackar/Dialog messages

--- a/lang/de.json
+++ b/lang/de.json
@@ -152,7 +152,7 @@
   "Organisation already joined": "Organisation bereits beigetreten",
   "Membership request already sent": "Mitgliedsantrag bereits gesendet",
   "Select one organization to continue": "Wählen Sie eine Organisation aus, um fortzufahren",
-  "SomeThing went wrong": "Etwas ist schief gelaufen",
+  "Something went wrong": "Etwas ist schief gelaufen",
   "Join in request sent to": "Beitrittsanfrage gesendet an",
   "successfully": "erfolgreich",
   "Are you sure you want to logout?": "Möchten Sie sich wirklich abmelden?",
@@ -255,5 +255,25 @@
   "Permission Denied": "Berechtigung verweigert",
   "Camera permission is required, to use this feature, give permission from app settings": "Die Kamera-Berechtigung ist erforderlich, um diese Funktion zu verwenden. Erteilen Sie die Berechtigung über die App-Einstellungen.",
   "SETTINGS": "EINSTELLUNGEN",
-  "LogOut": "Ausloggen"
+  "LogOut": "Ausloggen",
+  "Membership request already exist": "Mitgliedsantrag existiert bereits",
+  "Enter a valid password": "Geben Sie ein gültiges Passwort ein",
+  "Organization Not Found": "Organisation nicht gefunden",
+  "Account with this email already registered": "Konto mit dieser E-Mail bereits registriert",
+  "Something went wrong!": "Etwas ist schief gelaufen!",
+  "URL doesn't exist/no connection please check": "URL existiert nicht/keine Verbindung, bitte überprüfen Sie",
+  "The QR is not Working": "Der QR-Code funktioniert nicht",
+  "This QR version is not Supported.": "Diese QR-Version wird nicht unterstützt.",
+  "Comment sent": "Kommentar gesendet",
+  "Server not running/wrong url": "Server wird nicht ausgeführt/falsche URL",
+  "Couldn't update User details": "Benutzerdetails konnten nicht aktualisiert werden",
+  "Image is added": "Bild hinzugefügt",
+  "Post is uploaded": "Beitrag hochgeladen",
+  "Profile updated successfully": "Profil erfolgreich aktualisiert",
+  "The Camera is not working": "Die Kamera funktioniert nicht",
+  "This QR is not for the App": "Dieser QR-Code ist nicht für die App",
+  "The tag was added": "Der Tag wurde hinzugefügt",
+  "Start time must be before end time": "Die Startzeit muss vor der Endzeit liegen",
+  "Organisation on different server, logout and scan qr again": "Organisation auf einem anderen Server, ausloggen und QR-Code erneut scannen",
+  "Post was deleted if you had the rights!": "Der Beitrag wurde gelöscht, wenn Sie die Berechtigungen hatten!"
 }
