--- a/lang/hi.json
+++ b/lang/hi.json
@@ -153,7 +153,7 @@
   "Organisation already joined": "संगठन पहले ही शामिल हो चुका है",
   "Membership request already sent": "सदस्यता अनुरोध पहले ही भेजा जा चुका है",
   "Select one organization to continue": "जारी रखने के लिए एक संगठन चुनें",
-  "SomeThing went wrong": "कुछ गलत हो गया",
+  "Something went wrong": "कुछ गलत हो गया",
   "Join in request sent to": "ज्वाइन इन रिक्वेस्ट इन को भेजा गया",
   "successfully": "सफलतापूर्वक",
   "Are you sure you want to logout?": "क्या आप वाकई लॉगआउट करना चाहते हैं?",
@@ -255,5 +255,25 @@
   "Permission Denied": "अनुमति अस्वीकृत",
   "Camera permission is required, to use this feature, give permission from app settings": "कैमरे की अनुमति आवश्यक है, इस फ़ीचर का उपयोग करने के लिए, ऐप सेटिंग्स से अनुमति दें",
   "SETTINGS": "सेटिंग्स",
-  "LogOut": "लॉगआउट"
+  "LogOut": "लॉगआउट",
+  "Membership request already exist": "सदस्यता अनुरोध पहले से ही मौजूद है",
+  "Enter a valid password": "कृपया एक मान्य पासवर्ड दर्ज करें",
+  "Organization Not Found": "संगठन नहीं मिला",
+  "Account with this email already registered": "इस ईमेल से पहले से ही खाता रजिस्टर किया गया है",
+  "Something went wrong!": "कुछ गलत हो गया!",
+  "URL doesn't exist/no connection please check": "URL मौजूद नहीं है/कृपया कनेक्शन की जाँच करें",
+  "The QR is not Working": "QR काम नहीं कर रहा है",
+  "This QR version is not Supported.": "यह QR वेर्जन समर्थित नहीं है।",
+  "Comment sent": "टिप्पणी भेज दी गई",
+  "Server not running/wrong url": "सर्वर रन नहीं हो रहा/गलत URL",
+  "Couldn't update User details": "उपयोगकर्ता विवरण अपडेट नहीं किये जा सके",
+  "Image is added": "छवि जोड़ी गई",
+  "Post is uploaded": "पोस्ट अपलोड किया गया",
+  "Profile updated successfully": "प्रोफ़ाइल सफलतापूर्वक अपडेट की गई",
+  "The Camera is not working": "कैमरा काम नहीं कर रहा है",
+  "This QR is not for the App": "यह QR ऐप के लिए नहीं है",
+  "The tag was added": "टैग जोड़ा गया था",
+  "Start time must be before end time": "शुरू समय अंत समय से पहले होना चाहिए",
+  "Organisation on different server, logout and scan qr again": "संगठन अलग सर्वर पर है, लॉगआउट करें और फिर से QR स्कैन करें",
+  "Post was deleted if you had the rights!": "यदि आपके पास अधिकार थे तो पोस्ट हटा दिया गया था!"
 }
