--- a/lang/pt.json
+++ b/lang/pt.json
@@ -153,7 +153,7 @@
   "Organisation already joined": "Organização já aderiu",
   "Membership request already sent": "Pedido de adesão já enviado",
   "Select one organization to continue": "Selecione uma organização para continuar",
-  "SomeThing went wrong": "Algo deu errado",
+  "Something went wrong": "Algo deu errado",
   "Join in request sent to": "Solicitação de adesão enviada para",
   "successfully": "com sucesso",
   "Are you sure you want to logout?": "Tem certeza que deseja sair?",
@@ -255,5 +255,25 @@
   "Permission Denied": "Permissão negada",
   "Camera permission is required, to use this feature, give permission from app settings": "É necessária permissão de câmera para usar este recurso. Conceda permissão pelas configurações do aplicativo.",
   "SETTINGS": "CONFIGURAÇÕES",
-  "LogOut": "Sair"
+  "LogOut": "Sair",
+  "Membership request already exist": "Solicitação de associação já existe",
+  "Enter a valid password": "Insira uma senha válida",
+  "Organization Not Found": "Organização não encontrada",
+  "Account with this email already registered": "Conta com este e-mail já está registrada",
+  "Something went wrong!": "Algo deu errado!",
+  "URL doesn't exist/no connection please check": "A URL não existe/não há conexão, verifique",
+  "The QR is not Working": "O código QR não está funcionando",
+  "This QR version is not Supported.": "Esta versão do QR não é suportada.",
+  "Comment sent": "Comentário enviado",
+  "Server not running/wrong url": "Servidor não está em execução/URL errada",
+  "Couldn't update User details": "Não foi possível atualizar os detalhes do usuário",
+  "Image is added": "Imagem adicionada",
+  "Post is uploaded": "Postagem enviada",
+  "Profile updated successfully": "Perfil atualizado com sucesso",
+  "The Camera is not working": "A câmera não está funcionando",
+  "This QR is not for the App": "Este código QR não é para o aplicativo",
+  "The tag was added": "A tag foi adicionada",
+  "Start time must be before end time": "O horário de início deve ser anterior ao horário de término",
+  "Organisation on different server, logout and scan qr again": "Organização em servidor diferente, faça logout e escaneie o QR novamente",
+  "Post was deleted if you had the rights!": "A postagem foi excluída se você tiver os direitos!"
 }
