--- a/lang/en.json
+++ b/lang/en.json
@@ -158,7 +158,7 @@
   "Organisation already joined": "Organisation already joined",
   "Membership request already sent": "Membership request already sent",
   "Select one organization to continue": "Select one organization to continue",
-  "SomeThing went wrong": "SomeThing went wrong",
+  "Something went wrong": "Something went wrong",
   "Join in request sent to": "Join in request sent to",
   "successfully": "successfully",
   "Are you sure you want to logout?": "Are you sure you want to logout?",
@@ -255,5 +255,25 @@
   "Permission Denied": "Permission Denied",
   "Camera permission is required, to use this feature, give permission from app settings": "Camera permission is required, to use this feature, give permission from app settings",
   "SETTINGS": "SETTINGS",
-  "LogOut": "LogOut"
+  "LogOut": "LogOut",
+  "Membership request already exist": "Membership request already exist",
+  "Enter a valid password": "Enter a valid password",
+  "Organization Not Found": "Organization Not Found",
+  "Account with this email already registered": "Account with this email already registered",
+  "Something went wrong!": "Something went wrong!",
+  "URL doesn't exist/no connection please check": "URL doesn't exist/no connection please check",
+  "The QR is not Working": "The QR is not Working",
+  "This QR version is not Supported.": "This QR version is not Supported.",
+  "Comment sent": "Comment sent",
+  "Server not running/wrong url": "Server not running/wrong url",
+  "Couldn't update User details": "Couldn't update User details",
+  "Image is added": "Image is added",
+  "Post is uploaded": "Post is uploaded",
+  "Profile updated successfully": "Profile updated successfully",
+  "The Camera is not working": "The Camera is not working",
+  "This QR is not for the App": "This QR is not for the App",
+  "The tag was added": "The tag was added",
+  "Start time must be before end time": "Start time must be before end time",
+  "Organisation on different server, logout and scan qr again": "Organisation on different server, logout and scan qr again",
+  "Post was deleted if you had the rights!": "Post was deleted if you had the rights!"
 }
