--- a/lang/zh.json
+++ b/lang/zh.json
@@ -153,7 +153,7 @@
   "Organisation already joined": "组织已加入",
   "Membership request already sent": "会员申请已发送",
   "Select one organization to continue": "选择一个组织继续",
-  "SomeThing went wrong": "出问题了",
+  "Something went wrong": "出问题了",
   "Join in request sent to": "加入请求发送至",
   "successfully": "成功",
   "Are you sure you want to logout?": "您确定要退出吗？",
@@ -165,7 +165,7 @@
   "Information": "信息",
   "No account registered with this email": "服务器未运行/网址错误",
   "Dismiss": "解雇",
-  "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton",
+  "No organizations found Please contact your admin": "未找到任何组织。请联系您的管理员。",
   "For complete access, please": "如需完整访问，请",
   "join an organization.": "  加入一个组织。",
   "JOIN": "加入",
@@ -255,5 +255,25 @@
   "Permission Denied": "权限被拒绝",
   "Camera permission is required, to use this feature, give permission from app settings": "使用此功能需要摄像头权限。请从应用设置中授予权限。",
   "SETTINGS": "设置",
-  "LogOut": "登出"
+  "LogOut": "登出",
+  "Membership request already exist": "已存在会员请求",
+  "Enter a valid password": "请输入有效密码",
+  "Organization Not Found": "未找到组织",
+  "Account with this email already registered": "该电子邮件已注册帐户",
+  "Something went wrong!": "出错了！",
+  "URL doesn't exist/no connection please check": "URL不存在/没有连接，请检查",
+  "The QR is not Working": "二维码无法使用",
+  "This QR version is not Supported.": "不支持此二维码版本。",
+  "Comment sent": "已发送评论",
+  "Server not running/wrong url": "服务器未运行/URL错误",
+  "Couldn't update User details": "无法更新用户详细信息",
+  "Image is added": "已添加图像",
+  "Post is uploaded": "已上传帖子",
+  "Profile updated successfully": "已成功更新资料",
+  "The Camera is not working": "相机无法使用",
+  "This QR is not for the App": "此二维码不适用于本应用",
+  "The tag was added": "已添加标签",
+  "Start time must be before end time": "开始时间必须在结束时间之前",
+  "Organisation on different server, logout and scan qr again": "组织在不同的服务器上，请注销并重新扫描二维码",
+  "Post was deleted if you had the rights!": "如果您有权限，则已删除帖子！"
 }
