Fixed Localization not working in Home Tour & Components across App (#2424)
* bfix: Localization for App Tour

* Add Localization for missing components

* Add Localization for snackar/Dialog messages

* Test Coverage for app_tour

--- a/lang/en.json
+++ b/lang/en.json
@@ -158,7 +158,7 @@
   "Organisation already joined": "Organisation already joined",
   "Membership request already sent": "Membership request already sent",
   "Select one organization to continue": "Select one organization to continue",
-  "SomeThing went wrong": "SomeThing went wrong",
+  "Something went wrong": "Something went wrong",
   "Join in request sent to": "Join in request sent to",
   "successfully": "successfully",
   "Are you sure you want to logout?": "Are you sure you want to logout?",
@@ -233,5 +233,47 @@
   "Create your first event": "Create your first event",
   "There are no posts in this organization": "There are no posts in this organization",
   "Create your first post": "Create your first post",
-  "You have no post in this organization": "You have no post in this organization"
+  "You have no post in this organization": "You have no post in this organization",
+  "You can create a new event from here": "You can create a new event from here",
+  "You are all set to go lets get you in": "You are all set to go lets get you in",
+  "App Tour": "App Tour",
+  "Start": "Start",
+  "Skip": "Skip",
+  "Posts": "Posts",
+  "Tasks": "Tasks",
+  "Or": "Or",
+  "Please select any amount": "Please select any amount",
+  "Registered": "Registered",
+  "Not Registrable": "Not Registrable",
+  "Enter the title of your post": "Enter the title of your post",
+  "General": "General",
+  "Help & Support": "Help & Support",
+  "Talawa Docs": "Talawa Docs",
+  "All day": "All day",
+  "Join an Organisation": "Join an Organisation",
+  "DONATE": "DONATE",
+  "Permission Denied": "Permission Denied",
+  "Camera permission is required, to use this feature, give permission from app settings": "Camera permission is required, to use this feature, give permission from app settings",
+  "SETTINGS": "SETTINGS",
+  "LogOut": "LogOut",
+  "Membership request already exist": "Membership request already exist",
+  "Enter a valid password": "Enter a valid password",
+  "Organization Not Found": "Organization Not Found",
+  "Account with this email already registered": "Account with this email already registered",
+  "Something went wrong!": "Something went wrong!",
+  "URL doesn't exist/no connection please check": "URL doesn't exist/no connection please check",
+  "The QR is not Working": "The QR is not Working",
+  "This QR version is not Supported.": "This QR version is not Supported.",
+  "Comment sent": "Comment sent",
+  "Server not running/wrong url": "Server not running/wrong url",
+  "Couldn't update User details": "Couldn't update User details",
+  "Image is added": "Image is added",
+  "Post is uploaded": "Post is uploaded",
+  "Profile updated successfully": "Profile updated successfully",
+  "The Camera is not working": "The Camera is not working",
+  "This QR is not for the App": "This QR is not for the App",
+  "The tag was added": "The tag was added",
+  "Start time must be before end time": "Start time must be before end time",
+  "Organisation on different server, logout and scan qr again": "Organisation on different server, logout and scan qr again",
+  "Post was deleted if you had the rights!": "Post was deleted if you had the rights!"
 }
