--- a/lang/es.json
+++ b/lang/es.json
@@ -153,7 +153,7 @@
   "Organisation already joined": "Organización ya unida",
   "Membership request already sent": "Solicitud de membresía ya enviada",
   "Select one organization to continue": "Seleccione una organización para continuar",
-  "SomeThing went wrong": "Algo salió mal",
+  "Something went wrong": "Algo salió mal",
   "Join in request sent to": "Únase a la solicitud enviada a",
   "successfully": "exitosamente",
   "Are you sure you want to logout?": "¿Estás segura de que quieres cerrar sesión?",
@@ -233,5 +233,47 @@
   "Create your first event": "Crea tu primer evento",
   "There are no posts in this organization": "No hay publicaciones en esta organización",
   "Create your first post": "Crea tu primera publicación",
-  "You have no post in this organization": "No tienes ninguna publicación en esta organización"
+  "You have no post in this organization": "No tienes ninguna publicación en esta organización",
+  "You can create a new event from here": "Puede crear un nuevo evento desde aquí",
+  "You are all set to go lets get you in": "Ya estás listo para irte, vamos a meterte",
+  "App Tour": "Tour de la aplicación",
+  "Start": "Comenzar",
+  "Skip": "Saltar",
+  "Posts": "Publicaciones",
+  "Tasks": "Tareas",
+  "Or": "O",
+  "Please select any amount": "Por favor, seleccione una cantidad",
+  "Registered": "Registrado",
+  "Not Registrable": "No registrable",
+  "Enter the title of your post": "Ingrese el título de su publicación",
+  "General": "General",
+  "Help & Support": "Ayuda y soporte",
+  "Talawa Docs": "Talawa Documentos",
+  "All day": "Todo el día",
+  "Join an Organisation": "Únete a una organización",
+  "DONATE": "DONAR",
+  "Permission Denied": "Permiso denegado",
+  "Camera permission is required, to use this feature, give permission from app settings": "Se requiere permiso de cámara para usar esta función. Otorgue el permiso desde la configuración de la aplicación.",
+  "SETTINGS": "AJUSTES",
+  "LogOut": "Cerrar sesión",
+  "Membership request already exist": "Ya existe una solicitud de membresía",
+  "Enter a valid password": "Ingrese una contraseña válida",
+  "Organization Not Found": "Organización no encontrada",
+  "Account with this email already registered": "Cuenta con este correo electrónico ya registrada",
+  "Something went wrong!": "¡Algo salió mal!",
+  "URL doesn't exist/no connection please check": "La URL no existe/no hay conexión, verifique",
+  "The QR is not Working": "El código QR no funciona",
+  "This QR version is not Supported.": "Esta versión de QR no es compatible.",
+  "Comment sent": "Comentario enviado",
+  "Server not running/wrong url": "Servidor no en ejecución/URL incorrecta",
+  "Couldn't update User details": "No se pudieron actualizar los detalles del usuario",
+  "Image is added": "Se agregó la imagen",
+  "Post is uploaded": "Se subió la publicación",
+  "Profile updated successfully": "Perfil actualizado correctamente",
+  "The Camera is not working": "La cámara no funciona",
+  "This QR is not for the App": "Este código QR no es para la aplicación",
+  "The tag was added": "Se agregó la etiqueta",
+  "Start time must be before end time": "La hora de inicio debe ser anterior a la hora de finalización",
+  "Organisation on different server, logout and scan qr again": "Organización en un servidor diferente, cierre la sesión y escanee el código QR nuevamente",
+  "Post was deleted if you had the rights!": "¡Se eliminó la publicación si tenías los derechos!"
 }
