--- a/lang/hi.json
+++ b/lang/hi.json
@@ -77,7 +77,7 @@
   "Keep Public": "सार्वजनिक रखें",
   "Keep Registerable": "पंजीकरण योग्य रखें",
   "Event Details": "घटना की जानकारी",
-  "Register": "रजिस्टर करें",
+  "Register": "पंजीकरण करें",
   "Created by": "के द्वारा बनाई गई",
   "public": "सह लोक",
   "private": "निजी",
@@ -98,7 +98,7 @@
   "Show events for all": "सभी के लिए घटनाएँ दिखाएं",
   "Show invite-only events": "आमंत्रित लोगों के लिए घटनाएँ दिखाएं",
   "Add Date": "तिथि जोड़ें",
-  "Event": "प्रतिस्पर्धा",
+  "Event": "इवेंट्स",
   "My Events": "मेरे कार्यक्रम",
   "Public Events": "सार्वजनिक कार्यक्रम",
   "Private Events": "निजी कार्यक्रम",
@@ -125,7 +125,7 @@
   "Write here what do you want to share": "यहां लिखें कि आप क्या साझा करना चाहते हैं",
   "Join selected organisation": "चयनित संगठन से जुड़ें",
   "Home": "घर",
-  "Events": "आयोजन",
+  "Events": "इवेंट्स",
   "Chat": "चैट",
   "Chat Screen": "चैट स्क्रीन",
   "Confirm": "पुष्टि करें",
@@ -153,7 +153,7 @@
   "Organisation already joined": "संगठन पहले ही शामिल हो चुका है",
   "Membership request already sent": "सदस्यता अनुरोध पहले ही भेजा जा चुका है",
   "Select one organization to continue": "जारी रखने के लिए एक संगठन चुनें",
-  "SomeThing went wrong": "कुछ गलत हो गया",
+  "Something went wrong": "कुछ गलत हो गया",
   "Join in request sent to": "ज्वाइन इन रिक्वेस्ट इन को भेजा गया",
   "successfully": "सफलतापूर्वक",
   "Are you sure you want to logout?": "क्या आप वाकई लॉगआउट करना चाहते हैं?",
@@ -233,5 +233,47 @@
   "Create your first event": "अपना पहला इवेंट बनाएं",
   "There are no posts in this organization": "इस संगठन में कोई पोस्ट नहीं है",
   "Create your first post": "अपनी पहली पोस्ट बनाएं",
-  "You have no post in this organization": "इस संगठन में आपका कोई पोस्ट नहीं है"
+  "You have no post in this organization": "इस संगठन में आपका कोई पोस्ट नहीं है",
+  "You can create a new event from here": "यहां से आप एक नया इवेंट बना सकते हैं",
+  "You are all set to go lets get you in": "आप सभी सेट हैं जाने के लिए, चलो आपको भेजते हैं",
+  "App Tour": "ऐप टूर",
+  "Start": "शुरू करें",
+  "Skip": "छोड़ दें",
+  "Posts": "पोस्ट्स",
+  "Tasks": "टास्क",
+  "Or": "या",
+  "Please select any amount": "कृपया कोई राशि का चयन करें",
+  "Registered": "पंजीकृत",
+  "Not Registrable": "पंजीकरण योग्य नहीं",
+  "Enter the title of your post": "अपने पोस्ट का शीर्षक दर्ज करें",
+  "General": "सामान्य",
+  "Help & Support": "सहायता और समर्थन",
+  "Talawa Docs": "Talawa दस्तावेज",
+  "All day": "पूरा दिन",
+  "Join an Organisation": "एक संगठन से जुड़ें",
+  "DONATE": "दान करें",
+  "Permission Denied": "अनुमति अस्वीकृत",
+  "Camera permission is required, to use this feature, give permission from app settings": "कैमरे की अनुमति आवश्यक है, इस फ़ीचर का उपयोग करने के लिए, ऐप सेटिंग्स से अनुमति दें",
+  "SETTINGS": "सेटिंग्स",
+  "LogOut": "लॉगआउट",
+  "Membership request already exist": "सदस्यता अनुरोध पहले से ही मौजूद है",
+  "Enter a valid password": "कृपया एक मान्य पासवर्ड दर्ज करें",
+  "Organization Not Found": "संगठन नहीं मिला",
+  "Account with this email already registered": "इस ईमेल से पहले से ही खाता रजिस्टर किया गया है",
+  "Something went wrong!": "कुछ गलत हो गया!",
+  "URL doesn't exist/no connection please check": "URL मौजूद नहीं है/कृपया कनेक्शन की जाँच करें",
+  "The QR is not Working": "QR काम नहीं कर रहा है",
+  "This QR version is not Supported.": "यह QR वेर्जन समर्थित नहीं है।",
+  "Comment sent": "टिप्पणी भेज दी गई",
+  "Server not running/wrong url": "सर्वर रन नहीं हो रहा/गलत URL",
+  "Couldn't update User details": "उपयोगकर्ता विवरण अपडेट नहीं किये जा सके",
+  "Image is added": "छवि जोड़ी गई",
+  "Post is uploaded": "पोस्ट अपलोड किया गया",
+  "Profile updated successfully": "प्रोफ़ाइल सफलतापूर्वक अपडेट की गई",
+  "The Camera is not working": "कैमरा काम नहीं कर रहा है",
+  "This QR is not for the App": "यह QR ऐप के लिए नहीं है",
+  "The tag was added": "टैग जोड़ा गया था",
+  "Start time must be before end time": "शुरू समय अंत समय से पहले होना चाहिए",
+  "Organisation on different server, logout and scan qr again": "संगठन अलग सर्वर पर है, लॉगआउट करें और फिर से QR स्कैन करें",
+  "Post was deleted if you had the rights!": "यदि आपके पास अधिकार थे तो पोस्ट हटा दिया गया था!"
 }
