--- a/lang/ja.json
+++ b/lang/ja.json
@@ -153,7 +153,7 @@
   "Organisation already joined": "組織はすでに参加しています",
   "Membership request already sent": "メンバーシップリクエストはすでに送信されています",
   "Select one organization to continue": "続行するには組織を1つ選択してください",
-  "SomeThing went wrong": "何かがうまくいかなかった",
+  "Something went wrong": "何かがうまくいかなかった",
   "Join in request sent to": "に送信されたリクエストに参加する",
   "successfully": "正常に",
   "Are you sure you want to logout?": "ログアウトしてもよろしいですか?",
@@ -233,5 +233,47 @@
   "Create your first event": "最初のイベントを作成してください",
   "There are no posts in this organization": "この組織には投稿がありません",
   "Create your first post": "最初の投稿を作成してください",
-  "You have no post in this organization": "この組織には投稿がありません"
+  "You have no post in this organization": "この組織には投稿がありません",
+  "You can create a new event from here": "ここから新しいイベントを作成できます",
+  "You are all set to go lets get you in": "あなたは完全に準備が整いました。入れてあげましょう。",
+  "App Tour": "アプリトール",
+  "Start": "開始",
+  "Skip": "スキップ",
+  "Posts": "投稿",
+  "Tasks": "タスク",
+  "Or": "または",
+  "Please select any amount": "金額を選択してください",
+  "Registered": "登録済み",
+  "Not Registrable": "登録不可",
+  "Enter the title of your post": "投稿タイトルを入力してください",
+  "General": "一般",
+  "Help & Support": "ヘルプとサポート",
+  "Talawa Docs": "Talawa ドキュメント",
+  "All day": "1日中",
+  "Join an Organisation": "団体に参加する",
+  "DONATE": "寄付する",
+  "Permission Denied": "許可が拒否されました",
+  "Camera permission is required, to use this feature, give permission from app settings": "この機能を使用するには、カメラの許可が必要です。アプリの設定から許可を与えてください。",
+  "SETTINGS": "設定",
+  "LogOut": "ログアウト",
+  "Membership request already exist": "メンバーシップリクエストはすでに存在しています",
+  "Enter a valid password": "有効なパスワードを入力してください",
+  "Organization Not Found": "組織が見つかりません",
+  "Account with this email already registered": "このメールアドレスではすでにアカウントが登録されています",
+  "Something went wrong!": "何かが間違っています！",
+  "URL doesn't exist/no connection please check": "URLが存在しない/接続がないため、確認してください",
+  "The QR is not Working": "QRコードが動作していません",
+  "This QR version is not Supported.": "このQRバージョンはサポートされていません。",
+  "Comment sent": "コメントを送信しました",
+  "Server not running/wrong url": "サーバーが実行されていません/URLが違います",
+  "Couldn't update User details": "ユーザーの詳細を更新できませんでした",
+  "Image is added": "画像が追加されました",
+  "Post is uploaded": "投稿がアップロードされました",
+  "Profile updated successfully": "プロファイルを正常に更新しました",
+  "The Camera is not working": "カメラが動作していません",
+  "This QR is not for the App": "このQRコードはアプリには使用できません",
+  "The tag was added": "タグが追加されました",
+  "Start time must be before end time": "開始時間は終了時間より前でなければなりません",
+  "Organisation on different server, logout and scan qr again": "異なるサーバー上の組織です。ログアウトして、QRコードを再びスキャンしてください。",
+  "Post was deleted if you had the rights!": "権限がある場合、投稿は削除されました！"
 }
