--- a/lang/pt.json
+++ b/lang/pt.json
@@ -153,7 +153,7 @@
   "Organisation already joined": "Organização já aderiu",
   "Membership request already sent": "Pedido de adesão já enviado",
   "Select one organization to continue": "Selecione uma organização para continuar",
-  "SomeThing went wrong": "Algo deu errado",
+  "Something went wrong": "Algo deu errado",
   "Join in request sent to": "Solicitação de adesão enviada para",
   "successfully": "com sucesso",
   "Are you sure you want to logout?": "Tem certeza que deseja sair?",
@@ -233,5 +233,47 @@
   "Create your first event": "Crie seu primeiro evento",
   "There are no posts in this organization": "Não há posts nesta organização",
   "Create your first post": "Crie sua primeira postagem",
-  "You have no post in this organization": "Você não tem nenhuma postagem nesta organização"
+  "You have no post in this organization": "Você não tem nenhuma postagem nesta organização",
+  "You can create a new event from here": "Você pode criar um novo evento aqui",
+  "You are all set to go lets get you in": "Você está tudo pronto para ir, vamos te levar",
+  "App Tour": "Tour do aplicativo",
+  "Start": "Iniciar",
+  "Skip": "Pular",
+  "Posts": "Postagens",
+  "Tasks": "Tarefas",
+  "Or": "Ou",
+  "Please select any amount": "Por favor, selecione uma quantia",
+  "Registered": "Registado",
+  "Not Registrable": "Não registrável",
+  "Enter the title of your post": "Insira o título do seu post",
+  "General": "Geral",
+  "Help & Support": "Ajuda e suporte",
+  "Talawa Docs": "Talawa Documentos",
+  "All day": "Todo o dia",
+  "Join an Organisation": "Junte-se a uma organização",
+  "DONATE": "DOAR",
+  "Permission Denied": "Permissão negada",
+  "Camera permission is required, to use this feature, give permission from app settings": "É necessária permissão de câmera para usar este recurso. Conceda permissão pelas configurações do aplicativo.",
+  "SETTINGS": "CONFIGURAÇÕES",
+  "LogOut": "Sair",
+  "Membership request already exist": "Solicitação de associação já existe",
+  "Enter a valid password": "Insira uma senha válida",
+  "Organization Not Found": "Organização não encontrada",
+  "Account with this email already registered": "Conta com este e-mail já está registrada",
+  "Something went wrong!": "Algo deu errado!",
+  "URL doesn't exist/no connection please check": "A URL não existe/não há conexão, verifique",
+  "The QR is not Working": "O código QR não está funcionando",
+  "This QR version is not Supported.": "Esta versão do QR não é suportada.",
+  "Comment sent": "Comentário enviado",
+  "Server not running/wrong url": "Servidor não está em execução/URL errada",
+  "Couldn't update User details": "Não foi possível atualizar os detalhes do usuário",
+  "Image is added": "Imagem adicionada",
+  "Post is uploaded": "Postagem enviada",
+  "Profile updated successfully": "Perfil atualizado com sucesso",
+  "The Camera is not working": "A câmera não está funcionando",
+  "This QR is not for the App": "Este código QR não é para o aplicativo",
+  "The tag was added": "A tag foi adicionada",
+  "Start time must be before end time": "O horário de início deve ser anterior ao horário de término",
+  "Organisation on different server, logout and scan qr again": "Organização em servidor diferente, faça logout e escaneie o QR novamente",
+  "Post was deleted if you had the rights!": "A postagem foi excluída se você tiver os direitos!"
 }
