--- a/lang/fr.json
+++ b/lang/fr.json
@@ -158,7 +158,7 @@
   "Organisation already joined": "Organisation déjà adhérée",
   "Membership request already sent": "Demande d'adhésion déjà envoyée",
   "Select one organization to continue": "Sélectionnez une organisation pour continuer",
-  "SomeThing went wrong": "Quelque chose s'est mal passé",
+  "Something went wrong": "Quelque chose s'est mal passé",
   "Join in request sent to": "Demande d'adhésion envoyée à",
   "successfully": "avec succès",
   "Are you sure you want to logout?": "Êtes-vous sûr de vouloir vous déconnecter?",
@@ -233,5 +233,47 @@
   "Create your first event": "Créez votre premier événement",
   "There are no posts in this organization": "Il n'y a aucun article dans cette organisation",
   "Create your first post": "Créez votre premier article",
-  "You have no post in this organization": "Vous n'avez aucun article dans cette organisation"
+  "You have no post in this organization": "Vous n'avez aucun article dans cette organisation",
+  "You can create a new event from here": "Vous pouvez créer un nouvel événement à partir d'ici",
+  "You are all set to go lets get you in": "Vous êtes prêt à partir, laissez-nous vous faire entrer",
+  "App Tour": "Visite guidée de l'application",
+  "Start": "Démarrer",
+  "Skip": "Ignorer",
+  "Posts": "Publications",
+  "Tasks": "Tâches",
+  "Or": "Ou",
+  "Please select any amount": "Veuillez sélectionner un montant",
+  "Registered": "Enregistré",
+  "Not Registrable": "Non enregistrable",
+  "Enter the title of your post": "Entrez le titre de votre publication",
+  "General": "Général",
+  "Help & Support": "Aide et support",
+  "Talawa Docs": "Talawa Docs",
+  "All day": "Toute la journée",
+  "Join an Organisation": "Rejoindre une organisation",
+  "DONATE": "FAIRE UN DON",
+  "Permission Denied": "Autorisation refusée",
+  "Camera permission is required, to use this feature, give permission from app settings": "L'autorisation de la caméra est requise pour utiliser cette fonctionnalité. Accordez l'autorisation à partir des paramètres de l'application.",
+  "SETTINGS": "PARAMÈTRES",
+  "LogOut": "Se déconnecter",
+  "Membership request already exist": "La demande d'adhésion existe déjà",
+  "Enter a valid password": "Entrez un mot de passe valide",
+  "Organization Not Found": "Organisation non trouvée",
+  "Account with this email already registered": "Compte avec cet e-mail déjà enregistré",
+  "Something went wrong!": "Quelque chose s'est mal passé !",
+  "URL doesn't exist/no connection please check": "L'URL n'existe pas/pas de connexion, veuillez vérifier",
+  "The QR is not Working": "Le code QR ne fonctionne pas",
+  "This QR version is not Supported.": "Cette version de code QR n'est pas prise en charge.",
+  "Comment sent": "Commentaire envoyé",
+  "Server not running/wrong url": "Serveur non en cours d'exécution/mauvaise URL",
+  "Couldn't update User details": "Impossible de mettre à jour les détails de l'utilisateur",
+  "Image is added": "L'image a été ajoutée",
+  "Post is uploaded": "Le message a été téléchargé",
+  "Profile updated successfully": "Profil mis à jour avec succès",
+  "The Camera is not working": "La caméra ne fonctionne pas",
+  "This QR is not for the App": "Ce code QR n'est pas pour l'application",
+  "The tag was added": "La balise a été ajoutée",
+  "Start time must be before end time": "L'heure de début doit être antérieure à l'heure de fin",
+  "Organisation on different server, logout and scan qr again": "Organisation sur un serveur différent, déconnectez-vous et scannez à nouveau le code QR",
+  "Post was deleted if you had the rights!": "Le message a été supprimé si vous aviez les droits !"
 }
