update logic as per latest changes

--- a/lang/de.json
+++ b/lang/de.json
@@ -70,6 +70,8 @@
   "Add Event": "Ereignis hinzufügen",
   "Add": "Anzeige",
   "Add Image": "Bild hinzufügen",
+  "Select Start Date": "Startdatum auswählen",
+  "Select End Date": "Enddatum auswählen",
   "Select Start Date and Time": "Wählen Sie Startdatum und -uhrzeit",
   "Select End Date and Time": "Wählen Sie Enddatum und -uhrzeit",
   "Does not repeat": "Wiederholt sich nicht",
