--- a/lang/en.json
+++ b/lang/en.json
@@ -76,6 +76,8 @@
   "Add Event": "Add Event",
   "Add": "Add",
   "Add Image": "Add Image",
+  "Select Start Date": "Select Start Date",
+  "Select End Date": "Select End Date",
   "Select Start Date and Time": "Select Start Date and Time",
   "Select End Date and Time": "Select End Date and Time",
   "Does not repeat": "Does not repeat",
