--- a/lang/es.json
+++ b/lang/es.json
@@ -73,6 +73,8 @@
   "Add Image": "Añadir imagen",
   "Select Start Date and Time": "Seleccione la fecha y hora de inicio",
   "Select End Date and Time": "Seleccione la fecha y hora de finalización",
+  "Select Start Date": "Seleccionar fecha de inicio",
+  "Select End Date": "Seleccionar fecha de finalización",
   "Does not repeat": "No se repite",
   "Keep Public": "Mantener pública",
   "Keep Registerable": "Mantener registrable",
