--- a/lang/fr.json
+++ b/lang/fr.json
@@ -76,6 +76,8 @@
   "Add Event": "Ajouter un évènement",
   "Add": "Ajoutez-le",
   "Add Image": "Ajouter une image",
+  "Select Start Date": "Sélectionner la date de début",
+  "Select End Date": "Sélectionner la date de fin",
   "Select Start Date and Time": "Sélectionnez la date et l'heure de début",
   "Select End Date and Time": "Sélectionnez la date et l'heure de fin",
   "Does not repeat": "ça ne se répète pas",
