--- a/lang/hi.json
+++ b/lang/hi.json
@@ -71,6 +71,8 @@
   "Add Event": "कार्यक्रम जोड़ें",
   "Add": "इसे जोड़ें",
   "Add Image": "छवि जोड़ें",
+  "Select Start Date": "शुरूआत की तिथि का चयन करें",
+  "Select End Date": "समाप्ति की तिथि का चयन करें",
   "Select Start Date and Time": "प्रारंभ दिनांक और समय चुनें",
   "Select End Date and Time": "समाप्ति तिथि और समय चुनें",
   "Does not repeat": "यह दोहराता नहीं है",
