--- a/lang/pt.json
+++ b/lang/pt.json
@@ -71,6 +71,8 @@
   "Add Event": "Adicionar Evento",
   "Add": "Adicionar",
   "Add Image": "Adicionar imagem",
+  "Select Start Date": "Selecionar data de início",
+  "Select End Date": "Selecionar data de término",
   "Select Start Date and Time": "Selecione a data e hora de início",
   "Select End Date and Time": "Selecione a data e hora de término",
   "Does not repeat": "Não repete",
