--- a/lang/zh.json
+++ b/lang/zh.json
@@ -71,6 +71,8 @@
   "Add Event": "添加事件",
   "Add": "添加",
   "Add Image": "添加图片",
+  "Select Start Date": "选择开始日期",
+  "Select End Date": "选择结束日期",
   "Select Start Date and Time": "选择开始日期和时间",
   "Select End Date and Time": "选择结束日期和时间",
   "Does not repeat": "不重复",
