--- a/lang/de.json
+++ b/lang/de.json
@@ -278,5 +278,7 @@
   "Start time must be before end time": "Die Startzeit muss vor der Endzeit liegen",
   "Organisation on different server, logout and scan qr again": "Organisation auf einem anderen Server, ausloggen und QR-Code erneut scannen",
   "Post was deleted if you had the rights!": "Der Beitrag wurde gelöscht, wenn Sie die Berechtigungen hatten!",
-  "Members": "Mitglieder"
+  "Members": "Mitglieder",
+  "Remember me": "Erinnere dich an mich", 
+  "Login directly with": "Direkt anmelden mit"
 }
