--- a/lang/en.json
+++ b/lang/en.json
@@ -278,5 +278,7 @@
   "Start time must be before end time": "Start time must be before end time",
   "Organisation on different server, logout and scan qr again": "Organisation on different server, logout and scan qr again",
   "Post was deleted if you had the rights!": "Post was deleted if you had the rights!",
-  "Members": "Members"
+  "Members": "Members",
+  "Remember me": "Remember me",
+  "Login directly with": "Login directly with"
 }
