--- a/lang/es.json
+++ b/lang/es.json
@@ -278,5 +278,7 @@
   "Start time must be before end time": "La hora de inicio debe ser anterior a la hora de finalización",
   "Organisation on different server, logout and scan qr again": "Organización en un servidor diferente, cierre la sesión y escanee el código QR nuevamente",
   "Post was deleted if you had the rights!": "¡Se eliminó la publicación si tenías los derechos!",
-  "Members": "Miembros"
+  "Members": "Miembros",
+  "Remember me": "Recuérdame",
+  "Login directly with": "Iniciar sesión directamente con"
 }
