--- a/lang/pt.json
+++ b/lang/pt.json
@@ -278,5 +278,7 @@
   "Start time must be before end time": "O horário de início deve ser anterior ao horário de término",
   "Organisation on different server, logout and scan qr again": "Organização em servidor diferente, faça logout e escaneie o QR novamente",
   "Post was deleted if you had the rights!": "A postagem foi excluída se você tiver os direitos!",
-  "Members": "Membros"
+  "Members": "Membros",
+  "Remember me": "Lembre-se de mim", 
+  "Login directly with": "Entrar diretamente com"
 }
