login worklow fix

--- a/lang/de.json
+++ b/lang/de.json
@@ -280,5 +280,6 @@
   "Post was deleted if you had the rights!": "Der Beitrag wurde gelöscht, wenn Sie die Berechtigungen hatten!",
   "Members": "Mitglieder",
   "Remember me": "Erinnere dich an mich", 
-  "Login directly with": "Direkt anmelden mit"
+  "Login directly with": "Direkt anmelden mit",
+  "Continue Without Organization": "Ohne Organisation fortfahren"
 }
