--- a/lang/en.json
+++ b/lang/en.json
@@ -280,5 +280,6 @@
   "Post was deleted if you had the rights!": "Post was deleted if you had the rights!",
   "Members": "Members",
   "Remember me": "Remember me",
-  "Login directly with": "Login directly with"
+  "Login directly with": "Login directly with",
+  "Continue Without Organization": "Continue Without Organization"
 }
