--- a/lang/es.json
+++ b/lang/es.json
@@ -280,5 +280,6 @@
   "Post was deleted if you had the rights!": "¡Se eliminó la publicación si tenías los derechos!",
   "Members": "Miembros",
   "Remember me": "Recuérdame",
-  "Login directly with": "Iniciar sesión directamente con"
+  "Login directly with": "Iniciar sesión directamente con",
+  "Continue Without Organization": "Continuar sin organización"
 }
