--- a/lang/fr.json
+++ b/lang/fr.json
@@ -280,5 +280,6 @@
   "Post was deleted if you had the rights!": "Le message a été supprimé si vous aviez les droits !",
   "Members": " Membres",
   "Remember me": "Souviens-toi de moi",
-  "Login directly with": "Se connecter directement avec"
+  "Login directly with": "Se connecter directement avec",
+  "Continue Without Organization": "Continuer sans organisation"
 }
