--- a/lang/hi.json
+++ b/lang/hi.json
@@ -280,5 +280,6 @@
   "Post was deleted if you had the rights!": "यदि आपके पास अधिकार थे तो पोस्ट हटा दिया गया था!",
   "Members": " सदस्य",
   "Remember me": "मुझे याद रखें",
-  "Login directly with": "इसके साथ सीधे लॉगिन करें"
+  "Login directly with": "इसके साथ सीधे लॉगिन करें",
+  "Continue Without Organization": "संगठन के बिना जारी रखें"
 }
