--- a/lang/pt.json
+++ b/lang/pt.json
@@ -280,5 +280,6 @@
   "Post was deleted if you had the rights!": "A postagem foi excluída se você tiver os direitos!",
   "Members": "Membros",
   "Remember me": "Lembre-se de mim", 
-  "Login directly with": "Entrar diretamente com"
+  "Login directly with": "Entrar diretamente com",
+  "Continue Without Organization": "Continuar sem organização"
 }
