--- a/lang/zh.json
+++ b/lang/zh.json
@@ -280,5 +280,6 @@
   "Post was deleted if you had the rights!": "如果您有权限，则已删除帖子！",
   "Members": "成员",
   "Remember me": "记住我",
-  "Login directly with": "直接登录"
+  "Login directly with": "直接登录",
+  "Continue Without Organization": "继续没有组织"
 }
