modified:   lang/de.json 	modified:   lang/en.json 	modified:   lang/es.json 	modified:   lang/fr.json 	modified:   lang/hi.json 	modified:   lang/ja.json 	modified:   lang/pt.json 	modified:   lang/zh.json 	modified:   test/service_tests/org_service_test.dart 	modified:   test/utils_tests/queries_test.dart

--- a/lang/de.json
+++ b/lang/de.json
@@ -281,5 +281,6 @@
   "Members": "Mitglieder",
   "Remember me": "Erinnere dich an mich", 
   "Login directly with": "Direkt anmelden mit",
-  "Continue Without Organization": "Ohne Organisation fortfahren"
+  "Continue Without Organization": "Ohne Organisation fortfahren",
+  "No admins assigned": "Keine Admins zugewiesen"
 }
