--- a/lang/es.json
+++ b/lang/es.json
@@ -281,5 +281,6 @@
   "Members": "Miembros",
   "Remember me": "Recuérdame",
   "Login directly with": "Iniciar sesión directamente con",
-  "Continue Without Organization": "Continuar sin organización"
+  "Continue Without Organization": "Continuar sin organización",
+  "No admins assigned": "No hay admins asignados"
 }
