--- a/lang/fr.json
+++ b/lang/fr.json
@@ -281,5 +281,6 @@
   "Members": " Membres",
   "Remember me": "Souviens-toi de moi",
   "Login directly with": "Se connecter directement avec",
-  "Continue Without Organization": "Continuer sans organisation"
+  "Continue Without Organization": "Continuer sans organisation",
+  "No admins assigned": "Aucun admin assigné"
 }
