--- a/lang/pt.json
+++ b/lang/pt.json
@@ -281,5 +281,6 @@
   "Members": "Membros",
   "Remember me": "Lembre-se de mim", 
   "Login directly with": "Entrar diretamente com",
-  "Continue Without Organization": "Continuar sem organização"
+  "Continue Without Organization": "Continuar sem organização",
+  "No admins assigned": "Nenhum administrador atribuído"
 }
