--- a/lang/zh.json
+++ b/lang/zh.json
@@ -281,5 +281,6 @@
   "Members": "成员",
   "Remember me": "记住我",
   "Login directly with": "直接登录",
-  "Continue Without Organization": "继续没有组织"
+  "Continue Without Organization": "继续没有组织",
+  "No admins assigned": "没有分配管理员"
 }
