--- a/lang/en.json
+++ b/lang/en.json
@@ -281,5 +281,6 @@
   "Members": "Members",
   "Remember me": "Remember me",
   "Login directly with": "Login directly with",
-  "Continue Without Organization": "Continue Without Organization"
+  "Continue Without Organization": "Continue Without Organization",
+  "No admins assigned": "No admins assigned"
 }
