--- a/lang/hi.json
+++ b/lang/hi.json
@@ -281,5 +281,6 @@
   "Members": " सदस्य",
   "Remember me": "मुझे याद रखें",
   "Login directly with": "इसके साथ सीधे लॉगिन करें",
-  "Continue Without Organization": "संगठन के बिना जारी रखें"
+  "Continue Without Organization": "संगठन के बिना जारी रखें",
+  "No admins assigned": "कोई व्यवस्थापक नियुक्त नहीं किया गया है"
 }
